# biim

./: .editorconfig  .gitignore  README.md  fmp4.py  index.html  main.py  multi.py  pseudo.html  pseudo.py  pseudo_quality.py  pyproject.toml  requirements.dev.txt  requirements.txt  rtmp.py  seekable.py  vod.py  vod_fmp4.py  vod_main.py
biim/: __init__.py
biim/hls/: m3u8.py  segment.py
biim/id3/: txxx.py
biim/mp4/: avc.py  box.py  hevc.py  mp4a.py
biim/mpeg2ts/: h264.py  h265.py  packetize.py  parser.py  pat.py  pes.py  pmt.py  scte.py  section.py
biim/rtmp/: amf0.py  demuxer.py  remuxer.py  rtmp.py
biim/util/: bytestream.py
biim/variant/: codec.py  fmp4.py  handler.py  mpegts.py
hls/: m3u8.py  segment.py
id3/: priv.py
mp4/: avc.py  bitstream.py  box.py  hevc.py  mp4a.py
mpeg2ts/: h264.py  h265.py  packetize.py  parser.py  pat.py  pes.py  pmt.py  scte.py  section.py  ts.py
util/: bitstream.py  reader.py
